--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 minifb = "0.27"
 walkdir = "2.4"
+cpal = "0.15"
+rustfft = "6.2"
+image = "0.25"
